# Ball-collector-arm

./: README.md
src/robot_arm1/: CMakeLists.txt  package.xml
src/robot_arm1/config/: controller.yaml  gazebo_ros2_control_params.yaml  joint_names_robot_arm1.yaml
src/robot_arm1/launch/: display.launch.py  gazebo.launch.py  newgazebo.launch.py
src/robot_arm1/meshes/: gripper_base_link.stl  left_finger_link.stl  left_gear.stl  left_link.stl  right_finger_link.stl  right_gear.stl  right_link.stl  rotation_link1.stl  translation_link1.stl  translation_link2.stl  translation_link3.stl
src/robot_arm1/scripts/: controller.py  image_saver_and_3d_detector.py  jointstate_script.py
src/robot_arm1/src/: cpp_node.cpp
src/robot_arm1/urdf/: gazebo.xacro  robot_arm1.urdf.xacro
src/robot_arm1/worlds/: blue_ball.sdf  green_ball.sdf  pink_ball.sdf  red_ball_0.sdf  red_ball_1.sdf  yellow_ball.sdf
