<package format="3">
  <name>robot_arm1</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for robot_arm1</p>
    <p>This package contains configuration data, 3D models, and launch files
for the robot_arm1 robot</p>
  </description>
  <maintainer email="TODO@email.com">TODO</maintainer>
  <license>BSD</license>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies -->
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo_ros</depend>
  <depend>rclcpp</depend>
  <depend>trajectory_msgs</depend>
  <depend>gazebo_ros2_control</depend>
  <exec_depend>xacro</exec_depend>


  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path = "install/robot_arm1/share"/>
    <architecture_independent />
  </export>
</package>
